--- a/app/char.css
+++ b/app/char.css
@@ -2,5 +2,46 @@
     width: 100px;   
     height: 100px;
 }
+.character-display {
+    display: flex;
+    flex-direction: row;
+    height: 100px;
+}
 
-
+.character-info {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.stats {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+}
+.stat {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+.stat-name {
+    font-size: 16px;
+    font-weight: bold;
+}
+.stat-value {
+    font-size: 16px;
+}
+.char-name {
+    font-size: 24px;
+    font-weight: bold;
+}
+.char-image {
+    width: 100px;   
+    height: 100px;
+}
+.char-image {
+    width: 100px;   
+    height: 100px;
+}
