--- a/app/char.css
+++ b/app/char.css
@@ -5,7 +5,12 @@
 .character-display {
     display: flex;
     flex-direction: row;
-    height: 100px;
+    height: fit-content;
+    justify-content: center;
+    align-items: center;
+    gap: 5vw;
+    position: fixed;
+    bottom: 10%;
 }
 
 .character-info {
@@ -15,10 +20,21 @@
     flex-direction: column;
 }
 .stats {
-    display: flex;
+    display: grid;
     justify-content: space-around;
     align-items: center;
+    width: 100%;
+    height: 100%;
+    flex-wrap: wrap;
+    gap: 10px;
+}
+.stat {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
+    width: 100%;
+    height: 33%;
 }
 .stat {
     display: flex;
